middleware and pretty for business api
